[gd_scene load_steps=10 format=3 uid="uid://d3mcoteeescf1"]

[ext_resource type="Script" path="res://Scripts/UIElements/photo_readout.gd" id="1_ot3dj"]
[ext_resource type="Texture2D" uid="uid://6kewcgrkf4is" path="res://Assets/Sprites/32x64standin.png" id="2_tglud"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rw0bx"]
bg_color = Color(0.775063, 0.775063, 0.775063, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t6rav"]
bg_color = Color(0.365751, 0.617356, 0.880559, 1)

[sub_resource type="SystemFont" id="SystemFont_yb8pp"]
font_names = PackedStringArray("Rage")
subpixel_positioning = 0

[sub_resource type="Animation" id="Animation_xfdru"]
resource_name = "Print"
length = 7.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667, 1.2, 1.93333, 2.13333, 3, 3.26667, 3.46667),
"transitions": PackedFloat32Array(0.757858, 1, 0.784584, 1, 0.784584, 1, 1, 1),
"update": 0,
"values": [Vector2(10, -155), Vector2(10, -100), Vector2(10, -110), Vector2(10, -50), Vector2(10, -55), Vector2(10, 0), Vector2(10, -5), Vector2(10, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="Animation" id="Animation_lgla5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(10, -155)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_qmogt"]
resource_name = "Fall"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(3.35276e-08, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(10, 0), Vector2(10, 380)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(3.35276e-08, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.13446]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6p2ql"]
_data = {
"Fall": SubResource("Animation_qmogt"),
"Print": SubResource("Animation_xfdru"),
"RESET": SubResource("Animation_lgla5")
}

[node name="PhotoReadout" type="PanelContainer"]
process_mode = 1
offset_left = 24.0
offset_top = -10.0
offset_right = 154.0
offset_bottom = 149.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rw0bx")
script = ExtResource("1_ot3dj")

[node name="ReadoutMargin" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ReadoutVbox" type="VBoxContainer" parent="ReadoutMargin"]
layout_mode = 2
mouse_filter = 2

[node name="PhotoPanel" type="PanelContainer" parent="ReadoutMargin/ReadoutVbox"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_t6rav")

[node name="ReadoutTexture" type="TextureRect" parent="ReadoutMargin/ReadoutVbox/PhotoPanel"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_tglud")
expand_mode = 4
stretch_mode = 5

[node name="CaptionCenter" type="CenterContainer" parent="ReadoutMargin/ReadoutVbox"]
layout_mode = 2
mouse_filter = 2

[node name="ReadoutCaption" type="Label" parent="ReadoutMargin/ReadoutVbox/CaptionCenter"]
custom_minimum_size = Vector2(120, 25)
layout_mode = 2
theme_override_colors/font_color = Color(0.129558, 0.129558, 0.129558, 1)
theme_override_fonts/font = SubResource("SystemFont_yb8pp")
horizontal_alignment = 1
autowrap_mode = 2
text_overrun_behavior = 3

[node name="ReadoutAnimPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6p2ql")
}
